# anomaly

./: .gitignore  README.md  SETUP.md  biome.json  compose.yaml  package.json  tsconfig.json
.cursor/rules/: monorepo-conventions.mdc
apps/api/: .env.example  .gitignore  README.md  config.yaml  langgraph.json  main.py  pyproject.toml
apps/api/assets/: sample_report.json
apps/api/src/: compat.py  config.py  db.py  langsmith_client.py  lifespan.py  serializers.py  state.py
apps/api/src/agent/: __init__.py  agent.py  helpers.py  prompts.jsonl  schemas.py
apps/api/src/agent/tools/: __init__.py  code_executor.py  file_surfer.py  memory.py
apps/api/src/agent/tools/browser/: __init__.py  manager.py  tools.py
apps/api/src/agent/tools/sandbox/: __init__.py  client.py  instance.py
apps/api/src/graph/: __init__.py  attack_paths.py  behavior_analyzer.py  builder.py  config.py  content_extractors.py  guardian.py  inference.py  llamafirewall_client.py  loaders.py  persistence.py  resource_baselines.py  schemas.py  thread.py
apps/api/src/helpers/: ingestion.py  sentinel.py
apps/api/src/routes/: __init__.py  ingest.py  misc.py  runs.py  threads.py
apps/api/src/scripts/: deploy_modal.py  ingest_threads.py  push_prompts.py  run_baselines.py  sentinel.py
apps/api/src/services/: ingestion.py
apps/api/src/stores/: __init__.py  graph_db.py  payload_store.py
apps/web/: .env.example  .gitignore  env.ts  next.config.js  package.json  trigger.config.ts  tsconfig.json
apps/web/actions/: generate-thread-name.ts  generate-tool-description.ts  thread.ts
(+38 files in other folders)
